kubernetes/trainer-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trainer-service-http
spec:
  selector:
    matchLabels:
      app: trainer-service-http
  template:
    metadata:
      labels:
        app: trainer-service-http
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: trainer-service
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: trainer-service-http
spec:
  type: NodePort
  selector:
    app: trainer-service-http
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30100
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trainer-service-grpc
spec:
  selector:
    matchLabels:
      app: trainer-service-grpc
  template:
    metadata:
      labels:
        app: trainer-service-grpc
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: trainer-service
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: trainer-service-grpc
spec:
  type: ClusterIP
  selector:
    app: trainer-service-grpc
  ports:
    - name: grpc
      port: 3000
      targetPort: 3000
