kubernetes/trainings-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trainings-service-http
spec:
  selector:
    matchLabels:
      app: trainings-service-http
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: trainings-service-http
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: trainings-service
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: trainings-service-http
spec:
  type: NodePort
  selector:
    app: trainings-service-http
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30101
