kubernetes/users-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service-http
spec:
  selector:
    matchLabels:
      app: users-service-http
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: users-service-http
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: users-service
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: users-service-http
spec:
  type: NodePort
  selector:
    app: users-service-http
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30102
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service-grpc
spec:
  selector:
    matchLabels:
      app: users-service-grpc
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: users-service-grpc
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: users-service
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: users-service-grpc
spec:
  type: ClusterIP
  selector:
    app: users-service-grpc
  ports:
    - name: grpc
      port: 3000
      targetPort: 3000
